@@ -30,6 +30,7 @@ Improved Debugging:
 Improved ZX Vision menu interface:
 -Added setting to pause cpu emulation on menu when multitask active
 -Added Degraded ZX Desktop Fill Type
+-Added Accessibility->Menu accessibility settings as a quick way to enable some menu enhancements: high contrast style, hotkeys, etc
 -Show in file selector when a file can be expanded
 -Improved screen file previews: any file size of 6912 bytes is guessed as Spectrum screen
 -Maximizing windows now take care of size of ZX Desktop, when setting "Open menu on ZX Desktop" is enabled
